# atobot-trading

./: .dockerignore  .env.backup  .env.example  .env.pre-strategy-test  .gitignore  AUTOMATION_COMPLETE.md  AUTOMATION_GUIDE.md  BEGINNER_DEPLOYMENT.md  CRYPTO_STRATEGY_RESEARCH.md  DEMO_RESULTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PACKAGE.md  Dockerfile  INSTALLATION_COMPLETE.md  MODE_SWITCHER_GUIDE.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md  README.md  SIMULATION.md  STRATEGY_RESEARCH_v3.md  TESTING_GUIDE.md  VISUAL_GUIDE.md  atobot-crontab.txt  backtest.py  backtest_1month.py  backtest_1year.py  backtest_1year_results.txt  backtest_1year_results_v2.txt  backtest_3month_results.txt  backtest_crypto.py  backtest_dec2025.txt  backtest_ema_results.txt  backtest_feb2026.txt  backtest_jan2026.txt  backtest_stress_covid.py  backtest_stress_hardened.py  backtest_swing_aggressive.py  backtest_swing_aggressive_results.json  backtest_ultra.py  (+36 more)
.devcontainer/: devcontainer.json
backups/: .env.backup_2026-02-06  backup_summary_2026-02-06.txt
daily_reports/: 2026-02-04_summary.txt  latest.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
data/: atobot.db-shm  atobot.db-wal
deploy/: .env.production  DEPLOY.md  _add_swing_env.sh  _check.py  _deploy_fixes.py  _deploy_guardian.py  _deploy_hardening_v5.py  _fix_env.py  _rebuild.py  _rebuild2.py  _restart.py  _update_keys.py  deploy.sh  paper_trade.sh  provision_new_vps.py  setup-ghcr-auth.sh  setup-vps.sh
reports/: skip_reasons_last_5d.csv  (+1 more)
(+327 files in other folders)
